--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,22 @@
 
 {% block content %}
     {% for product in products %}
-        <div class="card" style="width: 18rem;">
-          <img src="{{ product.image }}" class="card-img-top" alt="image">
-          <div class="card-body">
-            <h5 class="card-title">{{ product.name }}</h5>
-            <h3 class="card-title">{{ product.product_category }}</h3>
-              <p class="card-text">{{ product.price }}</p>
-            <a href="{% url 'detailed' product.pk %}" class="btn btn-primary">Подробнее...</a>
+        <div class="card mb-3" style="max-width: 540px;">
+        <div class="row g-0">
+            <div class="col-md-4">
+            <img src="{{ product.image }}" class="img-fluid rounded-start w-100 h-100" alt="img">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">{{ product.name }}</h5>
+                <p class="card-text">{{ product.name }}</p>
+                <p class="card-text"><small class="text-body-secondary">Цена: {{ product.price }}</small></p>
+                  <a href="{% url 'detailed' product.pk %}" class="btn btn-primary">Подробнее...</a>
+              </div>
+            </div>
           </div>
         </div>
     {% endfor %}
 {% endblock %}
+
+
