--- a/templates/create_product.html
+++ b/templates/create_product.html
@@ -2,26 +2,6 @@
 
 {% block content %}
     <form action="{% url 'create_prod' %}" method="post">
-        {% csrf_token %}
-
-        <label>Наименование:</label><br/>
-        <input type="text" name="name" required/><br/>
-
-        <label>Цена:</label><br/>
-        <input type="number" name="price"/><br/>
-
-        <label>Картинка:</label><br/>
-        <input type="text" name="image"/><br/>
-
-        <label>Категория:</label><br/>
-        <select name="product_category_id">
-            {% for cat in categories %}
-                <option value="{{ cat.id }}">{{ cat.name }}</option>
-            {% endfor %}
-        </select><br/>
-
-        <label>Описание:</label><br/>
-        <input type="text" name="description"/><br/>
-        <input type="submit" value="Send"/>
+        {% include 'partial/create_&_update.html' with button_text='Создать' %}
     </form>
 {% endblock %}
