--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
             <div class="col-md-8">
               <div class="card-body">
                 <h5 class="card-title">{{ product.name }}</h5>
-                <p class="card-text">{{ product.name }}</p>
+                <p class="card-text">{{ product.description }}</p>
                 <p class="card-text"><small class="text-body-secondary">Цена: {{ product.price }}</small></p>
                   <a href="{% url 'detailed' product.pk %}" class="btn btn-primary">Подробнее...</a>
               </div>
